# Capricho

./: LICENSE  README.md  SW_JUMP_data.py  collect_data.py  prepare_jump_data.py  pyproject.toml  retrieve_JUMP_data.py  same_compounds.ipynb
.github/workflows/: ci.yml
docs/: README.md  requirements.txt
docs/source/: cli-reference.md  concepts.md  conf.py  index.md  index.rst  installation.md  quickstart.md
docs/source/_static/: custom.css
docs/source/api/: index.md
docs/source/guides/: admet-data.md  index.md
docs/source/tutorials/: admet-data.md  basic-retrieval.md  index.md
notebooks/: 3_caco2-case-study.ipynb  ChEMBL-all-caco2-assays.txt  ChEMBL-all-mdck-mdr1-a2b-assays.txt  ChEMBL-all-mdck-mdr1-assays.txt  activity_comment_analysis.ipynb  analysis.ipynb  analyze-cyp-data.ipynb  caco2_assay_discovery.sh  capricho-marimo-example.py  case-1-transparent_quality_control_cross-assay_aggr.ipynb  case-2-cyp-inhibition-mt-dataset.ipynb  case-3-caco2-permeability-w-unit-standardization.ipynb  ic50_analysis_interactive.py
notebooks/performance-profiling/: .gitignore  README.md  benchmark_case_studies.sh  measure_command.py
notebooks/permeability_ids/: ChEMBL-all-caco2-a2b-assays.txt  ChEMBL-all-caco2-b2a-assays.txt  ChEMBL-all-mdck-mdr1-b2a-assays.txt
src/Capricho/: __init__.py  _version_helper.py  analysis.py  logger.py  unichem.py
src/Capricho/chembl/: data_flag_functions.py  exceptions.py  parsing.py  processing.py  similarity.py  unit_conversions.py
src/Capricho/chembl/api/: downloader.py  sql_explorer.py
src/Capricho/cli/: chembl_data_pipeline.py  main.py  prepare.py
src/Capricho/core/: binarization.py  default_fields.py  fp_utils.py  pandas_helper.py  smiles_utils.py  stats_make.py  stereo.py  table_format.py
src/Capricho/pubchem/: api.py  core.py
src/CompoundMapper/: __init__.py  _version_helper.py  chembl.py  logger.py  stats_make.py  unichem.py
src/CompoundMapper/CLI/: fetch_from_chembl.py  fp_utils.py
src/CompoundMapper/chembl/: api.py  data_flag_functions.py  exceptions.py  filter_functions.py  parsing.py  processing.py  rate_limit.py  similarity.py
src/CompoundMapper/chembl/api/: downloader.py  sql_explorer.py  webresource.py
src/CompoundMapper/cli/: chembl_data_pipeline.py  fp_utils.py  main.py  workflow.py
src/CompoundMapper/core/: default_fields.py  fp_utils.py  pandas_helper.py  rate_limit.py  smiles_utils.py  stats_make.py  stereo.py
src/CompoundMapper/pubchem/: api.py  core.py
tests/: test_activity_curation.py  test_analysis.py  test_assay_overlap.py  test_binarization.py  test_chembl_processing.py  test_core.py  test_data_flag_functions.py  test_fp_utils.py  test_pandas_helper.py  test_rate_limit.py  test_stats_make.py  test_stereocenter.py  test_unit_conversions.py  test_workflow.py
tests/resources/: ADORA3_data.csv  ADORA3_data_not_aggregated.csv  ADORA3_data_recipe.json
