[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capricho"
dynamic = ["version"]
description = "Transparent, flexible and reproducible ChEMBL data curation, aggregation and analysis."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["ChEMBL", "drug discovery", "machine learning", "chemoinformatics", "computational chemistry"]
authors = [{ name = "David Araripe", email = "david.araripe17@gmail.com" }]
maintainers = [{ name = "David Araripe", email = "david.araripe17@gmail.com" }]
classifiers = [
  # "TODO",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Chemistry",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "chem-filters @ git+https://github.com/David-Araripe/chemFilters.git",
  "chembl_webresource_client",
  "chembl_downloader",
  "tabulate",
  "pandas",
  "numpy",
  "loguru",
  "scipy",
  "tqdm",
  "joblib",
  "rdkit >= 2022.09.1",
  "pyarrow",
  "typer",
  "job-tqdflex",
  ]

[project.optional-dependencies]
dev = ["ruff", "isort", "black", "pytest"]

[project.urls]
homepage = "https://github.com/David-Araripe/Capricho"
repository = "https://github.com/David-Araripe/Capricho"
# documentation = "https://readthedocs.org" TODO

[project.scripts]
capricho = "Capricho.cli.main:app"

[tool.setuptools_scm]
write_to = "src/Capricho/_version.py"

[tool.setuptools.dynamic]
version = {attr = "Capricho.__version__"}

[tool.ruff]
line-length = 110
target-version = "py39"
fix = true
ignore = ['E501'] # sometimes it goes longer on the docstrings...

[tool.isort]
profile = "black"

[tool.black]
line-length = 110
target-version = ['py39']
exclude = '''
(
    asv_bench/env
  | \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)
'''
